# advent-of-code

./: .gitignore  .pre-commit-config.yaml  Spec.hs  cabal.project.local  compare.cabal
haskell/2024/01/: Compare.hs  Main.hs  Spec.hs  compare.cabal
haskell/2024/02/: Lib.hs  Main.hs  Spec.hs  aoc.cabal
haskell/2024/03/: Lib.hs  Main.hs  Spec.hs  aoc.cabal
haskell/2024/04/: Lib.hs  Main.hs  Spec.hs  aoc.cabal
python/2024/01/: diff.py  similar.py
python/2024/02/: check.py
python/2024/03/: multiply.py  multiply2.py
